# python-homework

python-2024-main/: 01.Python_Introduction.ipynb  requirements.txt
python-2024-main-2/python-2024-main/: 03.NumPy.ipynb
python-2024-main-2/python-2024-main/tasks/: Task_2.ipynb
python-2024-main-3/python-2024-main/: 02.Python_snippets.ipynb  04.Pandas_Introduction.ipynb  requirements.txt
python-2024-main-3/python-2024-main/data/: timeseries.snappy.parquet
python-2024-main-3/python-2024-main/examples/: Cython.ipynb
python-2024-main-3/python-2024-main/tasks/: Task_2.ipynb  Task_4.md
python-2024-main/tasks/: Task_1.ipynb
python-homework-main-4/homeproject/: pyproject.toml  requirements.txt
python-homework-main-4/homeproject/homeproject/: app.py  utils.py
python-homework-main-4/homeproject/homeproject.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
python-homework-main-4/homeproject/tests/: test_utils.py
