[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "homeproject"
version = "0.1.0"
description = "Find the hottest month and city for a given year from temperature data"
authors = [
    { name = "Your Name", email = "your_email@example.com" }
]
requires-python = ">=3.6"
dependencies = [
    "pandas",
    "pytest"
]

[tool.isort]
profile = "black"

[tool.black]
line-length = 88

[tool.ruff]
line-length = 88
select = ["ALL"]
ignore = ["E501"]

[tool.mypy]
python-version = 3.8
ignore-missing-imports = true